noinst_PROGRAMS              = hutest01

hutest01_SOURCES             = hutest01.c
hutest01_LDFLAGS             = -lpthread -rdynamic
hutest01_CFLAGS              = -g -O0 -Wall -Wextra -Wpedantic -std=c99      \
                               -Wshadow -Wpointer-arith -Wcast-qual          \
                               -Wstrict-prototypes -Wmissing-prototypes      \
                               -Wno-missing-braces -Wswitch-default          \
                               -Wcast-align -Wunreachable-code -Wundef       \
                               -Wuninitialized

